--- a/apps/site/src/app/features/player/components/book-paragraph/book-paragraph.component.scss
+++ b/apps/site/src/app/features/player/components/book-paragraph/book-paragraph.component.scss
@@ -3,6 +3,6 @@
 :host {
   img {
     display: block;
-    margin: $default-padding-px calc(2 * $default-padding-px);
+    margin: $default-padding-px auto;
   }
 }
