BOOK-27: Добавить имплементацию для режима чтения для страниц плеера

--- a/apps/site/src/app/features/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.html
@@ -64,7 +64,7 @@
       ></ngx-mat-timepicker-field>
     </fieldset>
 
-    <h3>Режим чтения</h3>
+    <h3>Цвета плеера</h3>
     <fieldset class="readerViewSettings">
       <lib-color-picker-group formControlName="readerViewMode">
         <lib-color-picker
