BOOK-48: Функионал который по какому то секретному признаку будет показывать заблокированный контент

--- a/apps/site/src/app/features/unblock/components/unblock.component.html
+++ b/apps/site/src/app/features/unblock/components/unblock.component.html
@@ -1,1 +1,9 @@
-<h1>Контент раблокирован!</h1>
+<div class="container">
+  <h2>Контент раблокирован!</h2>
+
+  <p>Теперь вы можете открывать и слушать все заблокированные книги.</p>
+  <p>
+    Период действия разблокировки - 30 дней.<br />
+    После истечения срока действия вы можете вновь открыть эту страницу.
+  </p>
+</div>
