--- a/apps/site/src/app/features/unblock/components/unblock.component.scss
+++ b/apps/site/src/app/features/unblock/components/unblock.component.scss
@@ -1,6 +1,12 @@
+@use 'vars' as *;
+
 :host {
   display: flex;
   height: 100%;
-  align-items: center;
-  justify-content: center;
+
+  .container {
+    width: 100%;
+    height: 100%;
+    padding: calc(2 * $default-padding);
+  }
 }
