--- a/apps/site/src/app/features/player/components/player/player.component.scss
+++ b/apps/site/src/app/features/player/components/player/player.component.scss
@@ -1,10 +1,48 @@
 @use 'vars' as *;
 
 :host {
-  countdown-timer {
+  ::ng-deep countdown-timer {
     position: absolute;
-    right: $default-padding;
+    right: calc(2 * $default-padding);
     top: $default-padding;
     z-index: 2;
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+  }
+}
+
+:host.white {
+  ::ng-deep countdown-timer,
+  ::ng-deep .scrollable-canvas {
+    background-color: var(--reader-view-white-color);
+    color: var(--reader-view-white-font--color);
+  }
+}
+:host.warm {
+  ::ng-deep countdown-timer,
+  ::ng-deep .scrollable-canvas {
+    background-color: var(--reader-view-warm-color);
+    color: var(--reader-view-warm-font--color);
+  }
+}
+:host.dark {
+  ::ng-deep countdown-timer,
+  ::ng-deep .scrollable-canvas {
+    background-color: var(--reader-view-dark-color);
+    color: var(--reader-view-dark-font--color);
+  }
+
+  ::ng-deep countdown-timer {
+    box-shadow: 0px 0px 5px 2px rgba(100, 100, 100, 0.7);
+  }
+}
+:host.black {
+  ::ng-deep countdown-timer,
+  ::ng-deep .scrollable-canvas {
+    background-color: var(--reader-view-black-color);
+    color: var(--reader-view-black-font--color);
+  }
+
+  ::ng-deep countdown-timer {
+    box-shadow: 0px 0px 5px 2px rgba(100, 100, 100, 0.5);
   }
 }
