--- a/apps/site/src/app/features/player/components/player/player.component.scss
+++ b/apps/site/src/app/features/player/components/player/player.component.scss
@@ -6,43 +6,51 @@
     right: calc(2 * $default-padding);
     top: $default-padding;
     z-index: 2;
-    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+    opacity: 0.9;
   }
 }
 
 :host.white {
   ::ng-deep countdown-timer,
   ::ng-deep .scrollable-canvas {
-    background-color: var(--reader-view-white-color);
-    color: var(--reader-view-white-font--color);
+    background-color: $reader-view-white-color;
+    color: $reader-view-white-font-color;
+  }
+
+  ::ng-deep countdown-timer {
+    box-shadow: 0px 0px 5px 2px rgba($reader-view-white-font-color, 0.5);
   }
 }
 :host.warm {
   ::ng-deep countdown-timer,
   ::ng-deep .scrollable-canvas {
-    background-color: var(--reader-view-warm-color);
-    color: var(--reader-view-warm-font--color);
+    background-color: $reader-view-warm-color;
+    color: $reader-view-warm-font-color;
+  }
+
+  ::ng-deep countdown-timer {
+    box-shadow: 0px 0px 5px 2px rgba($reader-view-warm-font-color, 0.5);
   }
 }
 :host.dark {
   ::ng-deep countdown-timer,
   ::ng-deep .scrollable-canvas {
-    background-color: var(--reader-view-dark-color);
-    color: var(--reader-view-dark-font--color);
+    background-color: $reader-view-dark-color;
+    color: $reader-view-dark-font-color;
   }
 
   ::ng-deep countdown-timer {
-    box-shadow: 0px 0px 5px 2px rgba(100, 100, 100, 0.7);
+    box-shadow: 0px 0px 5px 2px rgba($reader-view-dark-font-color, 0.5);
   }
 }
 :host.black {
   ::ng-deep countdown-timer,
   ::ng-deep .scrollable-canvas {
-    background-color: var(--reader-view-black-color);
-    color: var(--reader-view-black-font--color);
+    background-color: $reader-view-black-color;
+    color: $reader-view-black-font-color;
   }
 
   ::ng-deep countdown-timer {
-    box-shadow: 0px 0px 5px 2px rgba(100, 100, 100, 0.5);
+    box-shadow: 0px 0px 5px 2px rgba($reader-view-black-font-color, 0.5);
   }
 }
